--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+
+client/node_modules
+server/node_modules
 node_modules
-dist
-dist-ssr
-*.local
+client/dist
+client/dist-ssr
+client/*.local
+
+server/dist
+server/dist-ssr
+server/*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +29,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+
+client/.env
+server/.env
