--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,12 +1,28 @@
 {
   "compilerOptions": {
-    // ...
-    "esModuleInterop": true,
     "jsx": "react",
-    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-    // ...
-  }
+    },
+    "target": "ES2020",
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+
+    /* Linting */
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"]
 }
